walkthrough/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  finalizers:
  - ingress.k8s.aws/resources
  labels:
    app: ingress
  name: ingress-locust-dashboard
  namespace: default
spec:
  defaultBackend:
    service:
      name: awsblog-locust
      port:
        number: 8089
